debugged the navbar, overlapping issue, the arrows container was lapping over the browse contianer making the hover not active, and fixed the z-index issue with the corrisponding slide dots, its not placed correctly. next ill be working on the details overview that is a triggerd modal when the message bubble is clicked that displays movie overview, and information

--- a/NowFlix/CSS/base.css
+++ b/NowFlix/CSS/base.css
@@ -23,3 +23,10 @@ button {
 * {
   box-sizing: border-box;
 }
+/* * {
+  background-color: rgba(255, 0, 0, 0.1) !important;
+}
+.browse-container {
+  background-color: rgba(28, 217, 84, 0.5) !important;
+  z-index: 1000 !important;
+} */
